--- a/SmartTV/web/index.html
+++ b/SmartTV/web/index.html
@@ -6,6 +6,7 @@
     </script>
     <script nomodule src="dist/main.min.js"></script>
     <script type="text/javascript" src="/socket.io/socket.io.js" onload="window.dispatchEvent(new CustomEvent('io-ready'))" async></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <div id="menu">
